--- a/zucchini-ui-frontend-react/.eslintrc
+++ b/zucchini-ui-frontend-react/.eslintrc
@@ -1,8 +1,8 @@
 {
+  "root": true,
   "env": {
     "browser": true,
-    "es6": true,
-    "node": true
+    "es6": true
   },
   "parser": "babel-eslint",
   "plugins": [
