--- a/zucchini-ui-frontend-react/.eslintrc
+++ b/zucchini-ui-frontend-react/.eslintrc
@@ -43,6 +43,7 @@
     "react/jsx-uses-react": "error",
     "react/jsx-uses-vars": "error",
     "react/jsx-no-bind": "error",
+    "react/sort-comp": "error",
     "no-console": "warn",
     "prefer-template": "warn",
     "quotes": [
