--- a/server-config.yml
+++ b/server-config.yml
@@ -11,3 +11,8 @@ mongoUri: "mongodb://${MONGO_HOST:-localhost}/${MONGO-DB:-zucchini}?connectTimeo
 
 logging:
   level: INFO
+
+errorOutputCodesPatterns:
+     NPE: NullPointerException
+     AssertionError: AssertionError
+     ResarailException: TpfNetworkException
