--- a/zucchini-ui-frontend-react/package.json
+++ b/zucchini-ui-frontend-react/package.json
@@ -59,6 +59,7 @@
     "react-router-redux": "^4.0.5",
     "redux": "^3.5.2",
     "redux-actions": "^2.0.1",
+    "redux-form": "^6.7.0",
     "redux-promise-middleware": "^4.0.0",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.0",
