--- a/zucchini-ui-frontend-react/package.json
+++ b/zucchini-ui-frontend-react/package.json
@@ -57,6 +57,7 @@
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.5",
+    "recompose": "^0.23.4",
     "redux": "^3.5.2",
     "redux-actions": "^2.0.1",
     "redux-form": "^6.7.0",
