--- a/zucchini-ui-frontend-react/package.json
+++ b/zucchini-ui-frontend-react/package.json
@@ -50,6 +50,7 @@
     "jquery": "^3.1.1",
     "lodash": "^4.14.1",
     "moment": "^2.15.1",
+    "pure-uuid": "^1.4.5",
     "query-string": "^4.2.3",
     "react": "^15.3.0",
     "react-bootstrap": "^0.31.0",
