--- a/zucchini-ui-frontend/package.json
+++ b/zucchini-ui-frontend/package.json
@@ -32,6 +32,7 @@
     "less": "^2.7.2",
     "less-loader": "^4.0.0",
     "mocha": "^3.3.0",
+    "postcss-loader": "^2.0.5",
     "react-addons-perf": "^15.3.2",
     "react-addons-test-utils": "^15.3.2",
     "react-test-renderer": "^15.5.4",
