Upgraded frontend versions

--- a/zucchini-ui-frontend/.eslintrc
+++ b/zucchini-ui-frontend/.eslintrc
@@ -9,6 +9,7 @@
     "react"
   ],
   "parserOptions": {
+    "sourceType": "module",
     "ecmaVersion": 2015,
     "ecmaFeatures": {
       "jsx": true
