--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ script:
 after_success:
   # Build, then push image to Docker
   - >-
-    if [ "$TRAVIS_BRANCH" == "master" && "$TRAVIS_PULL_REQUEST" == "false" ]; then
+    if [ "$DOCKER_USERNAME" != "" && "$TRAVIS_BRANCH" == "master" && "$TRAVIS_PULL_REQUEST" == "false" ]; then
       docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
       ./gradlew dockerPush
     fi
