--- a/build.gradle
+++ b/build.gradle
@@ -51,19 +51,19 @@ allprojects {
     }
 
     ext.versions = [
-        dropwizard        : '1.1.2',
+        dropwizard        : '1.1.3',
         orika             : '1.5.1',
         morphia           : '1.3.2',
         slf4j             : '1.7.24',
-        spring            : '4.3.9.RELEASE',
+        spring            : '4.3.10.RELEASE',
         junit             : '4.12',
         assertj           : '3.8.0',
-        mockito           : '2.8.9',
+        mockito           : '2.8.47',
         junitQuickcheck   : '0.7',
         capsule           : '1.0.3',
-        groovy            : '2.4.10',
+        groovy            : '2.4.12',
         cucumberGroovy    : '1.2.5',
-        jetty             : '9.4.2.v20170220',
+        jetty             : '9.4.6.v20170531',
         guava             : '21.0',
         hibernateValidator: '5.2.4.Final',
     ]
@@ -106,6 +106,22 @@ allprojects {
             // Versions plugin
 
             project.apply plugin: 'com.github.ben-manes.versions'
+
+            project.dependencyUpdates.resolutionStrategy = {
+
+                // Remove milestones, release candidates, etc from dependency updates check
+                componentSelection { rules ->
+                    rules.all { ComponentSelection selection ->
+                        boolean rejected = ['alpha', 'beta', 'rc', 'cr', 'm'].any { qualifier ->
+                            selection.candidate.version ==~ /(?i).*-${qualifier}.*/
+                        }
+                        if (rejected) {
+                            selection.reject('Release candidate')
+                        }
+                    }
+                }
+
+            }
 
             // PMD plugin
 
