--- a/zucchini-ui-frontend/package.json
+++ b/zucchini-ui-frontend/package.json
@@ -6,7 +6,8 @@
     "build": "webpack --progress --profile --colors -p",
     "lint": "eslint --ext .jsx,.js ./src/ ./test/",
     "fix": "eslint --fix --ext .jsx,.js ./src/ ./test/",
-    "test": "mocha --compilers js:babel-core/register --require ./test/helpers.js test/**/*.js test/**/*.jsx"
+    "test": "mocha --compilers js:babel-core/register --require ./test/helpers.js test/**/*.js test/**/*.jsx",
+    "stats": "webpack --profile --json -p >./build/stats.json"
   },
   "devDependencies": {
     "assert": "^1.4.1",
@@ -48,7 +49,7 @@
     "chartist": "^0.11.0",
     "flux-standard-action": "^1.2.0",
     "isomorphic-fetch": "^2.2.1",
-    "lodash": "^4.14.1",
+    "lodash-es": "^4.17.4",
     "moment": "^2.15.1",
     "pure-uuid": "^1.4.7",
     "query-string": "^5.0.0",
