--- a/zucchini-ui-frontend/package.json
+++ b/zucchini-ui-frontend/package.json
@@ -11,40 +11,41 @@
   },
   "devDependencies": {
     "assert": "^1.4.1",
-    "babel-core": "^6.13.2",
-    "babel-eslint": "^7.0.0",
-    "babel-loader": "^7.1.1",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.1",
+    "babel-loader": "^7.1.2",
     "babel-plugin-import-asserts": "^3.0.0",
     "babel-plugin-transform-strict-mode": "^6.11.3",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-2": "^6.18.0",
-    "babel-register": "^6.14.0",
+    "babel-register": "^6.26.0",
     "chai": "^4.1.1",
-    "chai-enzyme": "^0.8.0",
-    "css-loader": "^0.28.0",
-    "enzyme": "^2.9.1",
-    "eslint": "^4.4.1",
+    "chai-enzyme": "^1.0.0-beta.0",
+    "css-loader": "^0.28.5",
+    "enzyme": "^3.1.0",
+    "enzyme-adapter-react-15": "^1.0.1",
+    "eslint": "^4.5.0",
     "eslint-loader": "^1.9.0",
-    "eslint-plugin-react": "^7.2.0",
-    "expect": "^1.20.2",
+    "eslint-plugin-react": "^7.3.0",
+    "expect": "^21.2.0",
     "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.0",
+    "file-loader": "^1.1.5",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
-    "mocha": "^3.5.0",
+    "mocha": "^4.0.0",
     "postcss-loader": "^2.0.5",
     "react-addons-perf": "^15.3.2",
     "react-addons-test-utils": "^15.3.2",
     "react-test-renderer": "^15.5.4",
-    "sinon": "^3.2.0",
-    "style-loader": "^0.18.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^3.5.4",
+    "sinon": "^4.0.1",
+    "style-loader": "^0.19.0",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.5.5",
     "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
-    "babel-polyfill": "^6.13.0",
+    "babel-polyfill": "^6.26.0",
     "bootstrap": "^3.3.7",
     "chartist": "^0.11.0",
     "flux-standard-action": "^1.2.0",
@@ -59,11 +60,11 @@
     "react-redux": "^5.0.6",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.5",
-    "recompose": "^0.24.0",
+    "recompose": "^0.25.0",
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
     "redux-form": "^7.0.3",
-    "redux-promise-middleware": "4.2.1",
+    "redux-promise-middleware": "^4.4.1",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.0",
     "uuid": "^3.0.0"
