--- a/build.gradle
+++ b/build.gradle
@@ -51,10 +51,10 @@ allprojects {
     }
 
     ext.versions = [
-        dropwizard        : '1.1.4',
-        orika             : '1.5.1',
+        dropwizard        : '1.2.0',
+        orika             : '1.5.2',
         morphia           : '1.3.2',
-        slf4j             : '1.7.24',
+        slf4j             : '1.7.25',
         spring            : '5.0.0.RELEASE',
         junit             : '4.12',
         assertj           : '3.8.0',
@@ -63,9 +63,9 @@ allprojects {
         capsule           : '1.0.3',
         groovy            : '2.4.12',
         cucumberGroovy    : '1.2.5',
-        jetty             : '9.4.6.v20170531',
-        guava             : '21.0',
-        hibernateValidator: '5.2.4.Final',
+        jetty             : '9.4.7.v20170914',
+        guava             : '23.1-jre',
+        hibernateValidator: '5.4.1.Final',
     ]
 
     ext.getDockerTags = {
