Upgraded to React 16
+ Upgraded all dependencies

--- a/zucchini-ui-frontend/package.json
+++ b/zucchini-ui-frontend/package.json
@@ -6,7 +6,7 @@
     "build": "webpack --progress --profile --colors -p",
     "lint": "eslint --ext .jsx,.js ./src/ ./test/",
     "fix": "eslint --fix --ext .jsx,.js ./src/ ./test/",
-    "test": "mocha --compilers js:babel-core/register --require ./test/helpers.js test/**/*.js test/**/*.jsx",
+    "test": "mocha --require babel-register --require ./test/helpers.js test/**/*.{js,jsx}",
     "stats": "webpack --profile --json -p >./build/stats.json"
   },
   "devDependencies": {
@@ -24,7 +24,7 @@
     "chai-enzyme": "^1.0.0-beta.0",
     "css-loader": "^0.28.5",
     "enzyme": "^3.1.0",
-    "enzyme-adapter-react-15": "^1.0.1",
+    "enzyme-adapter-react-16": "^1.0.2",
     "eslint": "^4.5.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-react": "^7.3.0",
@@ -35,9 +35,7 @@
     "less-loader": "^4.0.5",
     "mocha": "^4.0.0",
     "postcss-loader": "^2.0.5",
-    "react-addons-perf": "^15.3.2",
-    "react-addons-test-utils": "^15.3.2",
-    "react-test-renderer": "^15.5.4",
+    "react-test-renderer": "^16.0.0",
     "sinon": "^4.0.1",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
@@ -54,13 +52,13 @@
     "moment": "^2.15.1",
     "pure-uuid": "^1.4.7",
     "query-string": "^5.0.0",
-    "react": "^15.3.0",
+    "react": "^16.0.0",
     "react-bootstrap": "^0.31.2",
-    "react-dom": "^15.3.0",
+    "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
-    "react-router": "^3.0.0",
+    "react-router": "^3.0.0 < 4.0.0",
     "react-router-redux": "^4.0.5",
-    "recompose": "^0.25.0",
+    "recompose": "^0.26.0",
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
     "redux-form": "^7.0.3",
