Built-ins for tests

--- a/zucchini-ui-frontend/.babelrc
+++ b/zucchini-ui-frontend/.babelrc
@@ -29,7 +29,8 @@
             "modules": "commonjs",
             "targets": {
               "node": true
-            }
+            },
+            "useBuiltIns": true
           }
         ],
         "react",
