--- a/zucchini-ui-frontend/package.json
+++ b/zucchini-ui-frontend/package.json
@@ -32,7 +32,7 @@
     "file-loader": "^1.1.5",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
-    "mocha": "^4.0.0",
+    "mocha": "^5.0.0",
     "postcss-loader": "^2.0.5",
     "react-test-renderer": "^16.0.0",
     "sinon": "^4.0.1",
@@ -43,7 +43,7 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^3.3.7 < 4",
     "chartist": "^0.11.0",
     "flux-standard-action": "^2.0.0",
     "isomorphic-fetch": "^2.2.1",
@@ -55,7 +55,7 @@
     "react-bootstrap": "^0.32.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
-    "react-router": "^3.0.0 < 4.0.0",
+    "react-router": "^3.0.0 < 4",
     "react-router-redux": "^4.0.5",
     "recompose": "^0.26.0",
     "redux": "^3.7.2",
