Map of build args for the Docker plugin

--- a/build.gradle
+++ b/build.gradle
@@ -322,7 +322,7 @@ project("${rootProject.name}-capsule") {
     }
 
     dockerBuild {
-        buildArg 'ZUCCHINI_VERSION', project.version
+        buildArg 'ZUCCHINI_VERSION': project.version
     }
 
 }
