--- a/zucchini-ui-frontend/package.json
+++ b/zucchini-ui-frontend/package.json
@@ -35,6 +35,7 @@
     "mocha": "^5.0.0",
     "postcss-loader": "^2.0.5",
     "react-test-renderer": "^16.0.0",
+    "redux-freeze": "^0.1.5",
     "sinon": "^4.0.1",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
