--- a/zucchini-ui-frontend/package.json
+++ b/zucchini-ui-frontend/package.json
@@ -25,7 +25,7 @@
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.2",
     "eslint": "^4.5.0",
-    "eslint-loader": "^1.9.0",
+    "eslint-loader": "^2.0.0",
     "eslint-plugin-react": "^7.3.0",
     "expect": "^22.0.6",
     "extract-text-webpack-plugin": "^3.0.0",
@@ -38,9 +38,9 @@
     "redux-freeze": "^0.1.5",
     "sinon": "^4.0.1",
     "style-loader": "^0.20.2",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.5.5",
-    "webpack-dev-server": "^2.7.1"
+    "url-loader": "^1.0.1",
+    "webpack": "^3.5.5 <4",
+    "webpack-dev-server": "^2.7.1 <3"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
@@ -51,7 +51,7 @@
     "lodash": "^4.17.4",
     "moment": "^2.20.1",
     "pure-uuid": "^1.4.7",
-    "query-string": "^5.0.0",
+    "query-string": "^6.0.0",
     "react": "^16.0.0",
     "react-bootstrap": "^0.32.0",
     "react-dom": "^16.0.0",
