--- a/zucchini-ui-frontend/.eslintrc
+++ b/zucchini-ui-frontend/.eslintrc
@@ -42,7 +42,7 @@
     "react/jsx-uses-react": "error",
     "react/jsx-uses-vars": "error",
     "react/jsx-no-bind": "error",
-    "react/sort-comp": "error",
+    "react/sort-comp": "off",
     "no-console": "warn",
     "prefer-template": "warn",
     "quotes": [
