--- a/build.gradle
+++ b/build.gradle
@@ -51,21 +51,21 @@ allprojects {
     }
 
     ext.versions = [
-        dropwizard        : '1.3.0',
+        dropwizard        : '1.3.1',
         orika             : '1.5.2',
         morphia           : '1.3.2',
         slf4j             : '1.7.25',
-        spring            : '5.0.4.RELEASE',
+        spring            : '5.0.5.RELEASE',
         junit             : '4.12',
         assertj           : '3.9.1',
-        mockito           : '2.15.0',
+        mockito           : '2.18.0',
         junitQuickcheck   : '0.8',
         capsule           : '1.0.3',
-        groovy            : '2.4.14',
+        groovy            : '2.4.15',
         cucumberGroovy    : '1.2.5',
         jetty             : '9.4.8.v20171121',
         guava             : '24.0-jre',
-        commonsText       : '1.2',
+        commonsText       : '1.3',
         hibernateValidator: '5.4.2.Final',
     ]
 
@@ -76,6 +76,7 @@ allprojects {
         // Get branch from Travis env var, otherwise, from Git
         String branchName = isTravisCI ? System.env.TRAVIS_BRANCH : project.grgit.branch.current.name
 
+        // If the Git branch is the master branch, then the Docker image will be tagged "latest"
         dockerTags << "branch-${branchName}"
         if (branchName == 'master') {
             dockerTags << 'latest'
