--- a/zucchini-ui-frontend/package.json
+++ b/zucchini-ui-frontend/package.json
@@ -28,10 +28,10 @@
     "eslint-loader": "^2.0.0",
     "eslint-plugin-react": "^7.3.0",
     "expect": "^22.0.6",
-    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.5",
     "less": "^3.0.1",
     "less-loader": "^4.0.5",
+    "mini-css-extract-plugin": "^0.4.0",
     "mocha": "^5.0.0",
     "postcss-loader": "^2.0.5",
     "react-test-renderer": "^16.0.0",
@@ -39,8 +39,9 @@
     "sinon": "^4.0.1",
     "style-loader": "^0.20.2",
     "url-loader": "^1.0.1",
-    "webpack": "^3.5.5 <4",
-    "webpack-dev-server": "^2.7.1 <3"
+    "webpack": "^4.5.0",
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.3"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
