--- a/zucchini-ui-frontend/package.json
+++ b/zucchini-ui-frontend/package.json
@@ -24,7 +24,7 @@
     "css-loader": "^0.28.5",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.2",
-    "eslint": "^4.5.0",
+    "eslint": "^5.0.1",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-react": "^7.3.0",
     "expect": "^23.1.0",
@@ -65,7 +65,6 @@
     "redux-form": "^7.0.3",
     "redux-promise-middleware": "^5.0.0",
     "redux-thunk": "^2.2.0",
-    "reselect": "^3.0.0",
-    "uuid": "^3.0.0"
+    "reselect": "^3.0.0"
   }
 }
