--- a/build.gradle
+++ b/build.gradle
@@ -333,7 +333,7 @@ project("${rootProject.name}-example-features") {
 
     dependencies {
 
-        compile "org.codehaus.groovy:groovy-all:${versions.groovy}"
+        compile "org.codehaus.groovy:groovy:${versions.groovy}"
         compile "info.cukes:cucumber-groovy:${versions.cucumberGroovy}"
         compile "org.slf4j:slf4j-api:${versions.slf4j}"
         compile "org.assertj:assertj-core:${versions.assertj}"
