--- a/zucchini-ui-frontend/package.json
+++ b/zucchini-ui-frontend/package.json
@@ -2,7 +2,7 @@
   "name": "zucchini-ui-frontend",
   "private": true,
   "scripts": {
-    "start": "webpack-dev-server --inline --debug --progress --open --history-api-fallback --mode=development",
+    "start": "webpack-dev-server --inline --debug --progress --open --history-api-fallback --mode=production",
     "build": "webpack --progress --profile --colors --mode=production",
     "lint": "eslint --ext .jsx,.js ./src/ ./test/",
     "fix": "eslint --fix --ext .jsx,.js ./src/ ./test/",
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "assert": "^1.4.1",
+    "autoprefixer": "^9.0.2",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.2",
@@ -21,7 +22,7 @@
     "chai": "^4.1.1",
     "chai-enzyme": "^1.0.0-beta.0",
     "cross-env": "^5.1.1",
-    "css-loader": "^0.28.5",
+    "css-loader": "^1.0.0",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.2",
     "eslint": "^5.0.1",
@@ -59,7 +60,7 @@
     "react-redux": "^5.0.6",
     "react-router": "^3.0.0 < 4",
     "react-router-redux": "^4.0.5",
-    "recompose": "^0.27.0",
+    "recompose": "^0.28.0",
     "redux": "^4.0.0",
     "redux-actions": "^2.2.1",
     "redux-form": "^7.0.3",
