--- a/zucchini-ui-frontend/.eslintrc
+++ b/zucchini-ui-frontend/.eslintrc
@@ -18,6 +18,11 @@
   "globals": {
     "configuration": true
   },
+  "settings": {
+    "react": {
+      "version": "16.4.2"
+    }
+  },
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended"
