--- a/zucchini-ui-frontend/package.json
+++ b/zucchini-ui-frontend/package.json
@@ -2,7 +2,7 @@
   "name": "zucchini-ui-frontend",
   "private": true,
   "scripts": {
-    "start": "webpack-dev-server --inline --debug --progress --open --history-api-fallback --mode=production",
+    "start": "webpack-dev-server --inline --debug --progress --open --history-api-fallback --mode=development",
     "build": "webpack --progress --profile --colors --mode=production",
     "lint": "eslint --ext .jsx,.js ./src/ ./test/",
     "fix": "eslint --fix --ext .jsx,.js ./src/ ./test/",
@@ -34,17 +34,20 @@
     "less-loader": "^4.0.5",
     "mini-css-extract-plugin": "^0.4.0",
     "mocha": "^5.0.0",
-    "postcss-loader": "^2.0.5",
+    "optimize-css-assets-webpack-plugin": "^5.0.0",
+    "postcss-loader": "^3.0.0",
     "react-test-renderer": "^16.0.0",
     "redux-freeze": "^0.1.5",
     "sinon": "^6.0.0",
-    "style-loader": "^0.21.0",
+    "style-loader": "^0.22.1",
+    "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^1.0.1",
     "webpack": "^4.5.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.3"
   },
   "dependencies": {
+    "@babel/runtime": "7.0.0-beta.42",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^3.3.7 < 4",
     "chartist": "^0.11.0",
