--- a/zucchini-ui-frontend/package.json
+++ b/zucchini-ui-frontend/package.json
@@ -7,19 +7,21 @@
     "lint": "eslint --ext .jsx,.js ./src/ ./test/",
     "fix": "eslint --fix --ext .jsx,.js ./src/ ./test/",
     "prettier": "prettier --write src/**/*.{js,jsx} test/**/*.{js,jsx}",
-    "test": "cross-env BABEL_ENV=test mocha --require babel-register --require ./test/helpers.js test/**/*.{js,jsx}",
-    "stats": "webpack --profile --json --mode=production >./build/stats.json"
+    "test": "cross-env BABEL_ENV=test mocha --require @babel/register --require ./test/helpers.js test/**/*.{js,jsx}",
+    "stats": "webpack --json --mode=production >./build/stats.json"
   },
   "devDependencies": {
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
     "assert": "^1.4.1",
     "autoprefixer": "^9.0.2",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.1",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-2": "^6.18.0",
-    "babel-register": "^6.26.0",
+    "babel-eslint": "^9.0.0",
+    "babel-loader": "^8.0.0",
     "chai": "^4.1.1",
     "chai-enzyme": "^1.0.0-beta.0",
     "cross-env": "^5.1.1",
@@ -32,7 +34,7 @@
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-react": "^7.3.0",
     "expect": "^23.1.0",
-    "file-loader": "^1.1.5",
+    "file-loader": "^2.0.0",
     "less": "^3.0.1",
     "less-loader": "^4.0.5",
     "mini-css-extract-plugin": "^0.4.0",
@@ -43,7 +45,7 @@
     "react-test-renderer": "^16.0.0",
     "redux-freeze": "^0.1.5",
     "sinon": "^6.0.0",
-    "style-loader": "^0.22.1",
+    "style-loader": "^0.23.0",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^1.0.1",
     "webpack": "^4.5.0",
@@ -51,8 +53,7 @@
     "webpack-dev-server": "^3.1.3"
   },
   "dependencies": {
-    "@babel/runtime": "7.0.0-beta.42",
-    "babel-polyfill": "^6.26.0",
+    "@babel/runtime-corejs2": "^7.0.0",
     "bootstrap": "^3.3.7 < 4",
     "chartist": "^0.11.0",
     "flux-standard-action": "^2.0.0",
@@ -67,7 +68,7 @@
     "react-redux": "^5.0.6",
     "react-router": "^3.0.0 < 4",
     "react-router-redux": "^4.0.5",
-    "recompose": "^0.28.0",
+    "recompose": "^0.29.0",
     "redux": "^4.0.0",
     "redux-actions": "^2.2.1",
     "redux-form": "^7.0.3",
