--- a/zucchini-ui-frontend/package.json
+++ b/zucchini-ui-frontend/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint --ext .jsx,.js ./src/ ./test/",
     "fix": "eslint --fix --ext .jsx,.js ./src/ ./test/",
     "prettier": "prettier --write src/**/*.{js,jsx} test/**/*.{js,jsx}",
-    "test": "cross-env BABEL_ENV=test mocha --require @babel/register --require ./test/helpers.js test/**/*.{js,jsx}",
+    "test": "jest",
     "stats": "webpack --json --mode=production >./build/stats.json"
   },
   "devDependencies": {
@@ -20,31 +20,27 @@
     "@babel/register": "^7.0.0",
     "assert": "^1.4.1",
     "autoprefixer": "^9.0.2",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^9.0.0",
+    "babel-jest": "^23.4.2",
     "babel-loader": "^8.0.0",
-    "chai": "^4.1.1",
-    "chai-enzyme": "^1.0.0-beta.0",
     "cross-env": "^5.1.1",
     "css-loader": "^1.0.0",
-    "enzyme": "^3.1.0",
-    "enzyme-adapter-react-16": "^1.0.2",
     "eslint": "^5.0.1",
     "eslint-config-prettier": "^3.0.1",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-react": "^7.3.0",
-    "expect": "^23.1.0",
     "file-loader": "^2.0.0",
+    "jest": "^23.5.0",
     "less": "^3.0.1",
     "less-loader": "^4.0.5",
     "mini-css-extract-plugin": "^0.4.0",
-    "mocha": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.0",
     "postcss-loader": "^3.0.0",
     "prettier": "^1.14.2",
     "react-test-renderer": "^16.0.0",
     "redux-freeze": "^0.1.5",
-    "sinon": "^6.0.0",
     "style-loader": "^0.23.0",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^1.0.1",
