--- a/zucchini-ui-frontend/package.json
+++ b/zucchini-ui-frontend/package.json
@@ -8,7 +8,9 @@
     "fix": "eslint --fix --ext .jsx,.js ./src/ ./test/",
     "prettier": "prettier --write src/**/*.{js,jsx} test/**/*.{js,jsx}",
     "test": "jest",
-    "stats": "webpack --json --mode=production >./build/stats.json"
+    "stats": "webpack --json --mode=production >./build/stats.json",
+    "babel": "babel",
+    "babel:test": "babel --env-name test"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
@@ -21,10 +23,10 @@
     "assert": "^1.4.1",
     "autoprefixer": "^9.0.2",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^9.0.0",
+    "babel-eslint": "^10.0.0",
     "babel-jest": "^23.4.2",
     "babel-loader": "^8.0.0",
-    "cross-env": "^5.1.1",
+    "babel-plugin-lodash": "^3.3.4",
     "css-loader": "^1.0.0",
     "eslint": "^5.0.1",
     "eslint-config-prettier": "^3.0.1",
@@ -35,6 +37,7 @@
     "jest": "^23.5.0",
     "less": "^3.0.1",
     "less-loader": "^4.0.5",
+    "lodash-webpack-plugin": "^0.11.5",
     "mini-css-extract-plugin": "^0.4.0",
     "optimize-css-assets-webpack-plugin": "^5.0.0",
     "postcss-loader": "^3.0.0",
@@ -42,13 +45,13 @@
     "react-test-renderer": "^16.0.0",
     "redux-freeze": "^0.1.5",
     "style-loader": "^0.23.0",
-    "uglifyjs-webpack-plugin": "^1.3.0",
-    "url-loader": "^1.0.1",
+    "terser-webpack-plugin": "^1.1.0",
     "webpack": "^4.5.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.3"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
     "@babel/runtime-corejs2": "^7.0.0",
     "bootstrap": "^3.3.7 < 4",
     "chartist": "^0.11.0",
@@ -64,12 +67,18 @@
     "react-redux": "^5.0.6",
     "react-router": "^3.0.0 < 4",
     "react-router-redux": "^4.0.5",
-    "recompose": "^0.29.0",
+    "recompose": "^0.30.0",
     "redux": "^4.0.0",
     "redux-actions": "^2.2.1",
     "redux-form": "^7.0.3",
     "redux-promise-middleware": "^5.0.0",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.0"
-  }
+  },
+  "browserslist": [
+    "last 5 chrome versions",
+    "last 5 firefox versions",
+    "last 2 safari versions",
+    "last 2 edge versions"
+  ]
 }
