--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ plugins {
     id 'us.kirchmeier.capsule' version '1.0.2' apply false
     id 'com.google.osdetector' version '1.4.0' apply false
     id 'org.ajoberstar.grgit' version '2.3.0' apply false
-    id 'com.github.spotbugs' version '1.6.2' apply false
+    id 'com.github.spotbugs' version '1.6.5' apply false
 }
 
 /**
@@ -53,7 +53,7 @@ allprojects {
     ext.versions = [
         dropwizard        : '1.3.7',
         orika             : '1.5.2',
-        morphia           : '1.3.2',
+        morphia           : '1.4.0',
         slf4j             : '1.7.25',
         spring            : '5.1.2.RELEASE',
         junit             : '4.12',
@@ -204,8 +204,8 @@ project("${rootProject.name}-backend") {
 
         compile "io.dropwizard:dropwizard-core:${versions.dropwizard}"
         compile "ma.glasnost.orika:orika-core:${versions.orika}"
-        compile "org.mongodb.morphia:morphia:${versions.morphia}"
-        compile "org.mongodb.morphia:morphia-logging-slf4j:${versions.morphia}"
+        compile "xyz.morphia.morphia:core:${versions.morphia}"
+        compile "xyz.morphia.morphia:logging-slf4j:${versions.morphia}"
         compile "org.slf4j:slf4j-api:${versions.slf4j}"
         compile "org.springframework:spring-context:${versions.spring}"
         compile "org.eclipse.jetty.websocket:javax-websocket-server-impl:${versions.jetty}"
