--- a/zucchini-ui-frontend/package.json
+++ b/zucchini-ui-frontend/package.json
@@ -55,10 +55,9 @@
     "@babel/runtime-corejs2": "^7.0.0",
     "bootstrap": "^3.3.7 < 4",
     "chartist": "^0.11.0",
+    "date-fns": "^1.29.0",
     "flux-standard-action": "^2.0.0",
-    "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
-    "moment": "^2.20.1",
     "pure-uuid": "^1.4.7",
     "query-string": "^6.0.0",
     "react": "^16.0.0",
