--- a/zucchini-ui-frontend/package.json
+++ b/zucchini-ui-frontend/package.json
@@ -64,8 +64,7 @@
     "react-bootstrap": "^0.32.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
-    "react-router": "^3.0.0 < 4",
-    "react-router-redux": "^4.0.5",
+    "react-router-dom": "^4.3.1",
     "recompose": "^0.30.0",
     "redux": "^4.0.0",
     "redux-actions": "^2.2.1",
