eslint for React Hooks

--- a/zucchini-ui-frontend/.eslintrc
+++ b/zucchini-ui-frontend/.eslintrc
@@ -6,7 +6,8 @@
     "es6": true
   },
   "plugins": [
-    "react"
+    "react",
+    "react-hooks" // https://reactjs.org/docs/hooks-rules.html#eslint-plugin
   ],
   "parserOptions": {
     "sourceType": "module",
@@ -21,5 +22,9 @@
   },
   "extends": [
     "plugin:react/recommended"
-  ]
+  ],
+  "rules": {
+    "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
+    "react-hooks/exhaustive-deps": "warn" // Checks effect dependencies
+  }
 }
