--- a/zucchini-ui-frontend/package.json
+++ b/zucchini-ui-frontend/package.json
@@ -30,6 +30,7 @@
     "eslint-loader": "^3.0.0",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react-hooks": "^2.0.1",
     "file-loader": "^4.0.0",
     "jest": "^24.0.0",
     "less": "^3.9.0",
