--- a/build.gradle
+++ b/build.gradle
@@ -79,15 +79,15 @@ allprojects {
 
             project.dependencies {
 
-                testCompile 'junit:junit:4.12'
-                testCompile 'org.assertj:assertj-core:3.14.0'
-                testCompile 'org.mockito:mockito-core:3.1.0'
+                testImplementation 'junit:junit:4.12'
+                testImplementation 'org.assertj:assertj-core:3.14.0'
+                testImplementation 'org.mockito:mockito-core:3.1.0'
 
             }
 
             // Maven plugin
 
-            project.apply plugin: 'maven'
+            project.apply plugin: 'maven-publish'
 
             // PMD plugin
 
@@ -182,23 +182,23 @@ project("${rootProject.name}-backend") {
 
         annotationProcessor 'org.hibernate:hibernate-validator-annotation-processor:5.4.3.Final'
 
-        compile 'io.dropwizard:dropwizard-core:1.3.16'
-        compile 'ma.glasnost.orika:orika-core:1.5.4'
-        compile 'xyz.morphia.morphia:core:1.4.0'
-        compile 'xyz.morphia.morphia:logging-slf4j:1.4.0'
-        compile 'org.slf4j:slf4j-api:1.7.29'
-        compile 'org.springframework:spring-context:5.2.1.RELEASE'
-        compile 'org.eclipse.jetty.websocket:javax-websocket-server-impl:9.4.18.v20190429'
-        compile 'org.apache.commons:commons-text:1.8'
+        implementation 'io.dropwizard:dropwizard-core:1.3.16'
+        implementation 'ma.glasnost.orika:orika-core:1.5.4'
+        implementation 'xyz.morphia.morphia:core:1.4.0'
+        implementation 'xyz.morphia.morphia:logging-slf4j:1.4.0'
+        implementation 'org.slf4j:slf4j-api:1.7.29'
+        implementation 'org.springframework:spring-context:5.2.1.RELEASE'
+        implementation 'org.eclipse.jetty.websocket:javax-websocket-server-impl:9.4.18.v20190429'
+        implementation 'org.apache.commons:commons-text:1.8'
 
-        compile 'org.javassist:javassist:3.26.0-GA'
+        implementation 'org.javassist:javassist:3.26.0-GA'
 
-        compile 'javax.xml.bind:jaxb-api:2.3.1'
-        runtime 'org.glassfish.jaxb:jaxb-runtime:2.3.2'
+        implementation 'javax.xml.bind:jaxb-api:2.3.1'
+        runtimeOnly 'org.glassfish.jaxb:jaxb-runtime:2.3.2'
 
-        testCompile 'org.assertj:assertj-core:3.12.2'
-        testCompile 'com.pholser:junit-quickcheck-core:0.9'
-        testCompile 'com.pholser:junit-quickcheck-generators:0.9'
+        testImplementation 'org.assertj:assertj-core:3.12.2'
+        testImplementation 'com.pholser:junit-quickcheck-core:0.9'
+        testImplementation 'com.pholser:junit-quickcheck-generators:0.9'
 
     }
 
@@ -278,9 +278,9 @@ project("${rootProject.name}-app") {
 
     dependencies {
 
-        compile project(":${rootProject.name}-backend")
-        compile project(":${rootProject.name}-frontend")
-        compile 'io.dropwizard:dropwizard-assets:1.3.16'
+        implementation project(":${rootProject.name}-backend")
+        implementation project(":${rootProject.name}-frontend")
+        implementation 'io.dropwizard:dropwizard-assets:1.3.16'
 
     }
 
@@ -313,10 +313,10 @@ project("${rootProject.name}-example-features") {
 
     dependencies {
 
-        compile 'info.cukes:cucumber-java:1.2.6'
-        compile 'org.slf4j:slf4j-api:1.7.26'
-        compile 'org.assertj:assertj-core:3.12.2'
-        compile 'com.google.guava:guava:27.1-jre'
+        implementation 'info.cukes:cucumber-java:1.2.6'
+        implementation 'org.slf4j:slf4j-api:1.7.26'
+        implementation 'org.assertj:assertj-core:3.12.2'
+        implementation 'com.google.guava:guava:27.1-jre'
 
     }
 
