--- a/zucchini-ui-frontend/package.json
+++ b/zucchini-ui-frontend/package.json
@@ -2,7 +2,7 @@
   "name": "zucchini-ui-frontend",
   "private": true,
   "scripts": {
-    "start": "webpack-dev-server --inline --debug --progress --open --history-api-fallback --compress --mode=development",
+    "start": "webpack-dev-server --debug --progress --open --mode=development",
     "build": "webpack --mode=production",
     "lint": "eslint --ext .jsx,.js ./src/ ./test/",
     "fix": "eslint --fix --ext .jsx,.js ./src/ ./test/",
