--- a/zucchini-ui-frontend/package.json
+++ b/zucchini-ui-frontend/package.json
@@ -57,6 +57,7 @@
     "chartist": "^0.11.0",
     "core-js": "^3.0.1",
     "date-fns": "^2.0.0",
+    "form-request-submit-polyfill": "^2.0.0",
     "lodash": "^4.17.4",
     "pure-uuid": "^1.5.6",
     "query-string": "^6.0.0",
