--- a/zucchini-ui-frontend/package.json
+++ b/zucchini-ui-frontend/package.json
@@ -25,6 +25,7 @@
     "babel-jest": "^26.0.0",
     "babel-loader": "^8.0.5",
     "babel-plugin-lodash": "^3.3.4",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.0.0",
     "eslint": "^7.0.0",
     "eslint-config-prettier": "^6.3.0",
