--- a/zucchini-ui-frontend/package.json
+++ b/zucchini-ui-frontend/package.json
@@ -4,9 +4,9 @@
   "scripts": {
     "start": "webpack-dev-server --debug --progress --open --mode=development",
     "build": "webpack --mode=production",
-    "lint": "eslint --resolve-plugins-relative-to . --ext .jsx,.js ./src/ ./test/",
-    "fix": "eslint --resolve-plugins-relative-to . --fix --ext .jsx,.js ./src/ ./test/",
-    "prettier": "prettier --write src/**/*.{js,jsx,scss} test/**/*.{js,jsx}",
+    "lint": "eslint --resolve-plugins-relative-to . --ext .jsx,.js .",
+    "fix": "eslint --resolve-plugins-relative-to . --fix --ext .jsx,.js .",
+    "prettier": "prettier --write .",
     "test": "jest",
     "stats": "webpack --profile --json --mode=production >./build/stats.json",
     "babel": "babel",
@@ -20,6 +20,8 @@
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
+    "@testing-library/jest-dom": "^5.8.0",
+    "@testing-library/react": "^10.0.4",
     "autoprefixer": "^9.4.7",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^26.0.0",
@@ -30,6 +32,8 @@
     "eslint": "^7.0.0",
     "eslint-config-prettier": "^6.3.0",
     "eslint-loader": "^4.0.0",
+    "eslint-plugin-jest": "^23.13.2",
+    "eslint-plugin-jest-dom": "^2.1.0",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-react-hooks": "^4.0.0",
